! Fixed this most *annoying* IE 6-10 bug that took me over a week to find and neutralize, where the cursor position was reset to the message's beginning when clicking a smiley or button in Wysiwyg mode. Note for anyone at SMF tempted to use sprites for buttons in the editor: don't even think of getting rid of the img tag. Or at least, just having an empty div will break your stuff. Trust me, you don't wanna waste a week debugging this. (Class-Editor.php) ! Fixed another IE bug where it didn't correctly convert smileys from Wysiwyg to non-Wysiwyg mode. This is because it seems to reorder img tag parameters instead of using whatever was requested originally. Bad IE. (Class-Editor.php) ! Fixed installer's first page: CSS cache generation was broken (resulting in unstyled HTML), and the language select box wouldn't show up. (other/install.php, install.css) * Moved New/Modify links in the Thought editor to inside the block, rather than in the block header. I'd say I should avoid putting links in short headers, because it can break the overall layout easily. (index.template.php) * Forgot to document the 'include' keyword for code tags in skin files. (Warm/skin.xml)

--- a/Themes/default/skins/install.css
+++ b/Themes/default/skins/install.css
@@ -1,4 +1,7 @@
 
+input, select, textarea
+	visibility: visible
+
 #upper_section
 	.user
 		height: 4em
